# instable

./: .gitignore  README.md  pyproject.toml
instable_bot/: main.py
