[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "instable-bot"
description = "Instagram bot for posting random images from a folder"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["instagram", "bot"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
	"instagrapi",
  "pillow>=8.1.1",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["instable_bot"]

[project.optional-dependencies]
tests = ["pytest"]
dev = ["pdbpp"]

[project.scripts]
instable-bot = "instable_bot.main:main"

[tool.isort]
profile = "black"
